# rBOTDA

./: Distance_functions.py  Plot_functions.py  Plot_functions.py.py  README.md  Utilitys.py  pyproject.toml  rBOTDA.py  rBOTDAExample.py  rbotda_MI_data.py  rbotda_halfmoon.py  setup.py
Experiments/: rbotda_MI_data.py  rbotda_halfmoon.py
lib/: balancing_functions.py  ot_helper_functions.py  penalization_functions.py  rBOTDA.py  utilitys.py
old/: Distance_functions.py
rbotda/: Utilitys.py  balancing_functions.py  ot_helper_functions.py  penalization_functions.py
