[project]
name = "rBOTDA"
version = "0.0.1"
authors = [
  { name="Nicolás Nieto", email="nnieto@sinc.unl.edu.ar" },
]
description = "Robust Backward Optimal Tranport"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/N-Nieto/rBOTDA"
"Bug Tracker" = "https://github.com/N-Nieto/rBOTDA/issues"